# finite-state-machine

./: CMakeLists.txt  README.md  finite-state machine.cpp  finite_state_machine.h  main.cpp
cmake_dir/: CMakeCache.txt  Makefile  MyMachine
laboratory work/: CMakeLists.txt  finite-state machine.cpp  finite_state_machine.h  main.cpp  tests.h
laboratory work/cmake_dir/: CMakeCache.txt  Makefile  MyMachine  MyMachine[1]_include.cmake  MyMachine[1]_tests.cmake  cmake_install.cmake
